--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "@types/react-dom": "^19.2.3",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
+    "react-router": "^7.13.1",
     "react-scripts": "5.0.1",
+    "sass": "^1.97.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
